test/langtools/tools/javac/valhalla/lworld-values/CheckFeatureGate1.out
CheckFeatureGate1.java:10:12: compiler.warn.restricted.type.not.allowed.preview: primitive, 17
CheckFeatureGate1.java:10:21: compiler.err.expected: token.identifier
1 error
1 warning
